[package]
name = "kcproxy"
version = "0.2.1"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "cookies"] }
lazy_static = "1.4.0"
regex = "1"
chrono = "0.4"
jsonwebtoken = "7"
